--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">常軌を逸したWEB企画・制作会社</div>
+                <div class="intro-lead-in">世の中の創造性を底上げする</div>
                 <div class="intro-heading">あっち</div>
                 <a href="#services" class="page-scroll btn btn-xl">詳細</a>
             </div>
@@ -90,33 +90,33 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">業務内容</h2>
-                    <h3 class="section-subheading text-muted">様々なチャネルを通して「あっち」(常識外)を「こっち」(常識)にします</h3>
+                    <h3 class="section-subheading text-muted">創造性を駆使し常識外の「あっち」を常識の「こっち」にします</h3>
                 </div>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-newspaper-o fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">情報コンテンツ企画・制作</h4>
-                    <p class="text-muted">WEBメディア、音声、動画などのコンテンツを企画、作成します。弊社はニッチ分野やマイノリティーをターゲットとした企画を得意としています。</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">eコマース</h4>
-                    <p class="text-muted">インターネットを用いた通信販売します。取扱商品は、ビジネスをエンターテイメントに変える雑貨の予定です。</p>
-                </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">新商品コンサルディング</h4>
-                    <p class="text-muted">新商品の提案・企画から、プロトタイプ・制作までサポートします。主にメディアコンテンツや電子機器に対しての強みがあります。</p>
+                    <p class="text-muted">新商品の企画から試作・制作をサポートします。主に電子機器やコンテンツに対しての強みがあります。</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">ハード・ソフトエンジニアリング</h4>
+                    <p class="text-muted">プロトタイピング、開発、量産、サービス立ち上げまで、製品開発の上流から下流まで一貫して業務を請け負います。小ロットから大量生産までの実績を活かします。</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-book fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">創造性を高めるコンテンツ制作</h4>
+                    <p class="text-muted">付け焼き刃ではない基礎訓練により創造性を高める方法を広めます。それによって制作されたコンテンツも広め創造性を高め続けるエコシステムを創っています。</p>
                 </div>
             </div>
         </div>
